fixed text overflow in mobile viewport

--- a/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
+++ b/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
@@ -31,4 +31,6 @@
 
 .description {
     grid-area: description;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
 }
